fix zinc colors problem in dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@ layer(base);
 
 @import 'tailwindcss';
 
+@custom-variant dark (&:where(.dark, .dark *));
+
 @theme {
   --default-transition-duration: 250ms;
   --color-base: #f6f6f6;
@@ -34,16 +36,6 @@ layer(base);
   --font-Vazir: Vazirmatn;
 }
 
-@custom-variant dark (&:where(.dark, .dark *));
-
-/*
-  The default border color has changed to `currentcolor` in Tailwind CSS v4,
-  so we've added these compatibility styles to make sure everything still
-  looks the same as it did with Tailwind CSS v3.
-
-  If we ever want to remove these styles, we need to add an explicit border
-  color utility to any element that depends on these defaults.
-*/
 
 @layer base {
   *,
@@ -60,17 +52,17 @@ layer(base);
   --color-base: #000;
   --color-natural: var(--color-white);
   --color-secondary: #121212;
-  --color-zinc-50: invert(var(--color-gray-50)) ;
-  --color-zinc-100: invert(var(--color-gray-100));
-  --color-zinc-200: invert(var(--color-gray-200));
-  --color-zinc-300: invert(var(--color-gray-300));
-  --color-zinc-400: invert(var(--color-gray-400));
-  --color-zinc-500: invert(var(--color-gray-500));
-  --color-zinc-600: invert(var(--color-gray-600));
-  --color-zinc-700: invert(var(--color-gray-700));
-  --color-zinc-800: invert(var(--color-gray-800));
-  --color-zinc-900: invert(var(--color-gray-900));
-  --color-zinc-950: invert(var(--color-gray-950));
+  --color-zinc-50: oklch(1.5% 0.002 67.839);
+  --color-zinc-100: oklch(3.9% 0.004 70.235);
+  --color-zinc-200: oklch(8.3% 0.006 71.563);
+  --color-zinc-300: oklch(14.5% 0.009 72.211);
+  --color-zinc-400: oklch(22.1% 0.012 72.567);
+  --color-zinc-500: oklch(30.9% 0.016 72.771);
+  --color-zinc-600: oklch(40.9% 0.019 72.873);
+  --color-zinc-700: oklch(52.1% 0.021 72.897);
+  --color-zinc-800: oklch(64.5% 0.021 72.859);
+  --color-zinc-900: oklch(76.1% 0.018 72.745);
+  --color-zinc-950: oklch(84.8% 0.015 72.523);
   }
 }
 
